added base style and skeleton

--- a/index.html
+++ b/index.html
@@ -5,9 +5,53 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Happy Page</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<h2 class="top">CONGRATS! YOU'RE ON THE HAPPY SIDE OF THE SCALE</h2>
+		<div class="container">
+			<div class="left-side">
+				<!-- <i class="fa-solid fa-quote-left"></i> -->
+				<form>
+					<label for="thoughts"></label><br />
+					<textarea
+						name="thoughts"
+						id="thoughts"
+						cols="30"
+						rows="10"
+						placeholder="Celebrate each victory, no matter how small. Tell us your thoughts behind your happy mood."
+					></textarea>
+				</form>
+				<!-- <i class="fa-solid fa-quote-right"></i> -->
+			</div>
+			<div class="right-side">
+				<p>SHARE WITH YOUR CLOSE ONES</p>
+				<div class="top-image">
+					<img
+						src="/imgs/happy_page_share_characters.png"
+						alt="3 happy people"
+						width="300"
+						height="300"
+					/>
+				</div>
+				<div class="bottom-image">
+					<div class="phone">
+						<img src="/imgs/phone-call_icon.png" alt="phone icon" width="50" />
+					</div>
+					<div class="message">
+						<img src="/imgs/message_icon.png" alt="message icon" width="50" />
+					</div>
+				</div>
+			</div>
+		</div>
+		<h2 class="bottom">
+			Happiness is contagious and we can feel it radiating from you.
+			Congratulations on having a great mood today.
+		</h2>
 		<script src="script.js"></script>
 	</body>
 </html>
