removed / from images

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 				</div>
 				<div class="bottom-image">
 					<div class="phone">
-						<img src="/imgs/phone-call_icon.png" alt="phone icon" width="50" />
+						<img src="imgs/phone-call_icon.png" alt="phone icon" width="50" />
 					</div>
 					<div class="message">
-						<img src="/imgs/message_icon.png" alt="message icon" width="50" />
+						<img src="imgs/message_icon.png" alt="message icon" width="50" />
 					</div>
 				</div>
 			</div>
